the_project/kustomize/base/todo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: project
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
        app.kubernetes.io/part-of: the-project
        environment: gke
        managed-by: kustomize
    spec:
      volumes:
      - name: image-storage
        persistentVolumeClaim:
          claimName: image-pvc
      containers:
      - name: todo-app
        image: duonghoang711/todo-app:v2
        imagePullPolicy: Always
        volumeMounts:
        - name: image-storage
          mountPath: /usr/src/app/images
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 256Mi
