the_project/kustomize/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-postgres
  namespace: project
spec:
  clusterIP: None
  selector:
    app: todo-postgres
  ports:
  - port: 5432
    targetPort: 5432
    name: postgres
