the_project/kustomize/base/todo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: project
spec:
  type: ClusterIP  # Changed from NodePort
  selector:
    app: todo-app
  ports:
  - port: 80
    targetPort: 3000
