the_project/kustomize/base/todo-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service

spec:
  selector:
    app: todo-backend
  ports:
    - port: 80
      targetPort: 3000
